--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 LexioProject/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-6_10_0.so filter=lfs diff=lfs merge=lfs -text
 LexioProject/Library/PlayerDataCache/Win/Data/resources.assets.resS filter=lfs diff=lfs merge=lfs -text
+LexioProject/Library/PlayerDataCache/Win64/Data/resources.assets.resS filter=lfs diff=lfs merge=lfs -text
